[package]
name = "libutpam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
users = "0.11.0"
chrono = "0.4"
libloading = "0.8.5"
libutpam_internal = { path = "../libutpam_internal" }

[lib]
name = "utpam"
crate-type = ["rlib","cdylib"]
