[package]
name = "libutpam_misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libutpam = { path = "../libutpam" }
libutpamc = { path = "../libutpamc" }
nix = "0.23.0"
zeroize = "1.4.3"
bytemuck = "1.20.0"

[lib]
name = "utpam_misc"
crate-type = ["rlib","cdylib"]

[features]
debug = []
