[package]
name = "libutpam_misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libutpam = { path = "../libutpam" }
libutpamc = { path = "../libutpamc" }
nix = { version = "0.29", features = ["term", "signal", "fs"] }
zeroize = "1.4.3"
bytemuck = "1.20.0"
lazy_static = "1.5.0"
stdext = "0.3.1"

[lib]
name = "utpam_misc"
crate-type = ["rlib","cdylib"]

[features]
debug = []
