[package]
name = "pam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libloading = "0.8.5"
libutpam = { path = "../libutpam" }
log = "0.4.22"
tklog = "0.2.4"

[lib]
name = "pam"
crate-type = ["rlib","cdylib"]
